--- a/vignettes/CSP_EQ5D_TTU.Rmd
+++ b/vignettes/CSP_EQ5D_TTU.Rmd
@@ -121,6 +121,7 @@ maui_params_ls <- make_maui_params_ls(maui_domains_pfcs_1L_chr = "eq5dq_",
 
 ## Analysis parameters
 Unlike the [AQoL-6D vignette](CSP_AQOL6D_TTU.html), when creating our input parameters list, we need to pass a value to the `control_ls` argument. We discovered this when undertaking the [initial exploratory analysis](Model_TTU.html).
+
 ```{r eval = F }
 input_params_ls <- make_input_params(ds_tb,
                                      control_ls = list(adapt_delta = 0.99),
@@ -134,7 +135,6 @@ input_params_ls <- make_input_params(ds_tb,
                                      prefd_covars_chr = NA_character_)
 
 ```
-
 
 # Run analysis
 ```{r eval = FALSE}
@@ -172,13 +172,14 @@ When rendering the draft manuscript, we have opted in this example to also uploa
 results_ls <- write_manuscript(input_params_ls = input_params_ls,
                                write_to_dv_1L_lgl = T)
 ```
-The draft manuscript created by the previous call is available at: https://dataverse.harvard.edu/api/access/datafile/4937713 .
+
+The draft manuscript created by the previous call is available at: https://dataverse.harvard.edu/api/access/datafile/4942297 .
 
 # Purge dataset copies
 All remaining local copies (but not the original version) of the study dataset are deleted from the workspace.
 
 ```{r echo = TRUE, eval=FALSE }
-write_to_delete_ds_copies(path_params_ls$paths_ls)
+write_to_delete_ds_copies(input_params_ls)
 ```
 
 \elandscape
