--- a/vignettes/CSP_AQOL6D_TTU.Rmd
+++ b/vignettes/CSP_AQOL6D_TTU.Rmd
@@ -12,13 +12,13 @@ vignette: >
 
 This vignette is an example of implementing of a reproducible workflow to:
 
-- develop transfer to utility models to predict AQoL-6D; 
+- develop transfer to utility models to predict AQoL-6D in a clinical mental health sample; 
 
 - create and share catalogues of these models; and 
 
 - author a scientific summary of the results and methods deployed. 
 
-This example, should be read in conjunction with [another similar workflow implemented for EQ-5D data and alternative predictors](CSP_EQ5D_TTU.html), which highlights some additional considerations. It is highly recommended that you only implement this reporting workflow for your own projects once you have identified an optimal set of input parameters following an [initial exploratory analysis](Model_TTU.html). The benefits of undertaking such initial exploratory work include identifying where it may be appropriate to override algorithm default selections for preferred model types and covariates and discovering if it is necessary to supply non-default input parameters to address problems in model convergence.
+This example, should be read in conjunction with [the vignette illustrating a reporting workflow implemented for developing an EQ-5D TTU using alternative predictors](CSP_EQ5D_TTU.html), which highlights some additional considerations. It is highly recommended that you only implement this reporting workflow for your own projects once you have identified an optimal set of input parameters following an [initial exploratory analysis](Model_TTU.html). The benefits of undertaking such initial exploratory work include identifying where it may be appropriate to override algorithm default selections for preferred model types and covariates and discovering if it is necessary to supply non-default input parameters to address problems in model convergence.
 
 As with all the vignettes included with the TTU package, this example is illustrated using entirely fake data, so do not use its outputs to inform decision making. For an example of how TTU workflows were applied to real data see https://www.medrxiv.org/content/10.1101/2021.07.07.21260129v2.full .
 
@@ -74,7 +74,7 @@ header_yaml_args_ls <- make_header_yaml_args_ls(authors_tb = authors_tb,
 We add parameters relating to the desired output format of the reports we will be producing.
 
 ```{r }
-output_format_ls <- make_output_format_ls(manuscript_outp_1L_chr = "Word",
+output_format_ls <- make_output_format_ls(manuscript_outp_1L_chr = "PDF",
                                           manuscript_digits_1L_int = 2L,
                                           supplementary_outp_1L_chr = "PDF",
                                           supplementary_digits_1L_int = 2L)
@@ -262,23 +262,22 @@ results_ls <- write_manuscript(input_params_ls = input_params_ls,
                                write_to_dv_1L_lgl = T)
 ```
 
-The document exported to the dataset by the preceding call is accessible at: https://dataverse.harvard.edu/api/access/datafile/4942229 (it is in ".docx" format as we specified "Word" as our desired output format (see earlier in the workflow)). You can override the output format specified in the input parameter list object by using the `output_type_1L_chr` argument. Note, that this time around we are using the `results_ls` object as the main input as this object was automatically saved (to the directory path stored in `results_ls$path_params_ls$paths_ls$output_data_dir_1L_chr`) by the preceding call.
+The manuscript exported to the dataset by the preceding call is accessible at: https://dataverse.harvard.edu/api/access/datafile/4957407 . A local version will also automatically be saved on your machine and you can discover where this is by printing the object `results_ls$path_params_ls$paths_ls$reports_dir_1L_chr`.
 
-```{r eval = F}
-write_manuscript(results_ls = results_ls,
-                 write_to_dv_1L_lgl = T,
-                 output_type_1L_chr = "PDF")
-```
-
-The PDF version is available at: https://dataverse.harvard.edu/api/access/datafile/4942228 . A local version will automatically be saved on your machine and you can discover where this is by printing the object `results_ls$path_params_ls$paths_ls$reports_dir_1L_chr`.
+You can override the output format specified in the input parameter list object by using the `output_type_1L_chr` argument. Note, that this time around we are using the `results_ls` object as the main input as this object was automatically saved (to the directory path stored in `results_ls$path_params_ls$paths_ls$output_data_dir_1L_chr`) by the preceding call.
 
 ## Modify for publication
 
 If you wish to develop the manuscript into something you will submit for publication, there are two options for doing so:
 
-- If your planned submission format is PDF or LaTeX, edit the markdown files (printing object `results_ls$path_params_ls$paths_ls$path_to_ms_mkdn_1L_dir` will tell you where these have been saved) and run `write_manuscript(results_ls = results_ls, output_type_1L_chr = "PDF")`. Both PDF and TeX files are saved as a result of this command.
+- If your planned submission format is PDF or LaTeX, edit the markdown files (printing object `results_ls$path_params_ls$paths_ls$path_to_ms_mkdn_1L_dir` will tell you where these have been saved) and then run `write_manuscript(results_ls = results_ls, output_type_1L_chr = "PDF")`. Both PDF and TeX files are saved as a result of this command. Note this call to `write_manuscript` includes a `results_ls = results_ls` argument instead of using the `input_params_ls` argument. That is because, by default a `results_ls` object is saved to a local directory and can thus be retrieved later for use in a new session.
 
-- If your planned submission format is Word, you can just edit the word document rendered by the `write_manuscript` function. This is relatively straightforward, though  unlike the PDF output, you will need to manually edit some of the section numbering and table formatting / headings. 
+- If your planned submission format is Word, you can just edit the word document rendered by the `write_manuscript` function. This is relatively straightforward, though  unlike the PDF output, you will need to manually edit some of the section numbering and table formatting / headings. If you did not specify "Word" as your intended manuscript output format, you can render a Word version with the following command:
+
+```{r eval = F}
+write_manuscript(results_ls = results_ls,
+                 output_type_1L_chr = "Word")
+```
 
 # Purge dataset copies
 As a final step, it is important to delete all local copies (but not the original version) of the study dataset that were produced during the analysis.
