--- a/vignettes/CSP_AQOL6D_TTU.Rmd
+++ b/vignettes/CSP_AQOL6D_TTU.Rmd
@@ -267,17 +267,7 @@ The manuscript exported to the dataset by the preceding call is accessible at: h
 You can override the output format specified in the input parameter list object by using the `output_type_1L_chr` argument. Note, that this time around we are using the `results_ls` object as the main input as this object was automatically saved (to the directory path stored in `results_ls$path_params_ls$paths_ls$output_data_dir_1L_chr`) by the preceding call.
 
 ## Modify for publication
-
-If you wish to develop the manuscript into something you will submit for publication, there are two options for doing so:
-
-- If your planned submission format is PDF or LaTeX, edit the markdown files (printing object `results_ls$path_params_ls$paths_ls$path_to_ms_mkdn_1L_dir` will tell you where these have been saved) and then run `write_manuscript(results_ls = results_ls, output_type_1L_chr = "PDF")`. Both PDF and TeX files are saved as a result of this command. Note this call to `write_manuscript` includes a `results_ls = results_ls` argument instead of using the `input_params_ls` argument. That is because, by default a `results_ls` object is saved to a local directory and can thus be retrieved later for use in a new session.
-
-- If your planned submission format is Word, you can just edit the word document rendered by the `write_manuscript` function. This is relatively straightforward, though  unlike the PDF output, you will need to manually edit some of the section numbering and table formatting / headings. If you did not specify "Word" as your intended manuscript output format, you can render a Word version with the following command:
-
-```{r eval = F}
-write_manuscript(results_ls = results_ls,
-                 output_type_1L_chr = "Word")
-```
+If you wish to develop the manuscript into something you will submit for publication, consult https://github.com/ready4-dev/ttu_lng_ss for guidance.
 
 # Purge dataset copies
 As a final step, it is important to delete all local copies (but not the original version) of the study dataset that were produced during the analysis.
